# automation-gateway

./: .env.example  .gitignore  README.md
contracts/: internal-api.openapi.yaml
custom-bots/biometric-proxy/: .coverage  Dockerfile  pyproject.toml  requirements.txt
custom-bots/biometric-proxy/app/: __init__.py  config.py  decision.py  errors.py  http_client.py  main.py
custom-bots/biometric-proxy/app/application/: __init__.py  ports.py
custom-bots/biometric-proxy/app/application/use_cases/: __init__.py  decision_worker.py
custom-bots/biometric-proxy/app/domain/: __init__.py  model.py
custom-bots/biometric-proxy/app/infrastructure/: __init__.py  clock.py  logging.py  metrics.py  tracing.py
custom-bots/biometric-proxy/app/infrastructure/config/: env_settings.py
custom-bots/biometric-proxy/app/infrastructure/garmin/: stress_provider.py
custom-bots/biometric-proxy/app/infrastructure/node_gateway/: alert_publisher.py
custom-bots/biometric-proxy/app/interfaces/: __init__.py
custom-bots/biometric-proxy/app/interfaces/http/: app.py
custom-bots/biometric-proxy/tests/: test_alert_publisher.py  test_contract.py  test_decision_behavior.py  test_http_client.py
custom-bots/example-bot/: Dockerfile  bot.py
custom-bots/node-gateway/: Dockerfile  eslint.config.js  jest.config.cjs  package.json  tsconfig.json
deploy/: docker-compose.yml
deploy/monitoring/: alert-rules.yml  alertmanager.yml  otelcol-config.yaml  prometheus.yml  tempo.yaml
docs/: ADR.md  ARCHITECTURE.md
infrastructure/: install-docker.sh  setup-firewall.sh
(+28 files in other folders)
