[project]
name = "biometric-proxy"
version = "1.0.0"
description = "Garmin biometric proxy for stress alerts"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "ARG001",  # unused function argument (e.g. protocol methods)
    "UP017",   # datetime.UTC requires Python 3.11+; keep timezone.utc for 3.10 compat
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/errors.py",
    "app/config.py",
    "app/decision.py",
    "app/interfaces/*",
]
